--- a/public/admissions.html
+++ b/public/admissions.html
@@ -365,9 +365,8 @@
                 <h1 class="school-title">Trường THPT A Sanh</h1>
             </div>
             <div class="nav-links">
-                <a href="index.html"><i class="fas fa-home"></i> Trang chủ</a>
-                <a href="#"><i class="fas fa-info-circle"></i> Giới thiệu</a>
-                <a href="#"><i class="fas fa-phone"></i> Liên hệ</a>
+                <a href="/"><i class="fas fa-home"></i> Trang chủ</a>
+                <a href="/contact"><i class="fas fa-phone"></i> Liên hệ</a>
             </div>
         </div>
     </header>
