--- a/public/index.html
+++ b/public/index.html
@@ -664,7 +664,7 @@
                 đội ngũ giáo viên giàu kinh nghiệm và cơ sở vật chất hiện đại. Chúng tôi đang mở đăng ký tuyển sinh cho năm học mới.
             </p>
             <div class="flex justify-center">
-                <a href="/admission.html" class="btn bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-6 rounded focus:outline-none focus:shadow-outline transition-all duration-300">
+                <a href="/tuyensinh" class="btn bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-6 rounded focus:outline-none focus:shadow-outline transition-all duration-300">
                     Đăng ký tuyển sinh ngay
                 </a>
             </div>
@@ -688,7 +688,7 @@
                     <h3 class="text-lg font-bold mb-2">Liên kết nhanh</h3>
                     <ul>
                         <li><a href="/" class="hover:text-blue-300">Trang chủ</a></li>
-                        <li><a href="/admission" class="hover:text-blue-300">Tuyển sinh</a></li>
+                        <li><a href="/tuyensinh" class="hover:text-blue-300">Tuyển sinh</a></li>
                         <li><a href="/news" class="hover:text-blue-300">Tin tức</a></li>
                         <li><a href="/contact" class="hover:text-blue-300">Liên hệ</a></li>
                     </ul>
