--- a/public/index.html
+++ b/public/index.html
@@ -787,7 +787,7 @@
                 đội ngũ giáo viên giàu kinh nghiệm và cơ sở vật chất hiện đại. Chúng tôi đang mở đăng ký tuyển sinh cho năm học mới.
             </p>
             <div class="flex justify-center">
-                <a href="/admission.html" class="btn bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-6 rounded focus:outline-none focus:shadow-outline transition-all duration-300">
+                <a href="/tuyensinh" class="btn bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-6 rounded focus:outline-none focus:shadow-outline transition-all duration-300">
                     Đăng ký tuyển sinh ngay
                 </a>
             </div>
