--- a/public/news.html
+++ b/public/news.html
@@ -22,7 +22,7 @@
         .dark-mode {
             background-color: #1a1025;
             color: #f3e0ff;
-            background-image: url('https://i.imgur.com/FHEmbS8.png');
+            background-image: url('https://i.imgur.com/AxQXWvB.jpeg');
         }
         
         .magical-card {
@@ -621,7 +621,7 @@
             if (posts.length === 0) {
                 postsContainer.innerHTML = `
                     <div class="text-center py-12 magical-card rounded-xl">
-                        <img src="https://i.pinimg.com/originals/b9/b2/32/b9b232952b22a6dfcee8148f2650129b.gif" alt="Empty magic scroll" class="w-32 mx-auto mb-4">
+                        <img src="https://i.imgur.com/j6LFaez.gif" alt="Empty magic scroll" class="w-32 mx-auto mb-4">
                         <p class="text-lg font-medium text-pink-600 dark:text-purple-300">
                             ✨ Chưa có thần chú nào được tạo ra ✨
                         </p>
