--- a/public/contact.html
+++ b/public/contact.html
@@ -331,7 +331,7 @@
                         </div>
                         <p><strong>Trường THPT A Sanh</strong></p>
                         <p><i class="fas fa-map-marker-alt" style="color: var(--primary-color);"></i> Địa chỉ: 705-IaKrái-IaGrai-Gia Lai</p>
-                        <p><i class="fas fa-phone-alt" style="color: var(--primary-color);"></i> Điện thoại: 0987654321 789</p>
+                        <p><i class="fas fa-phone-alt" style="color: var(--primary-color);"></i> Điện thoại: 0987 654 321</p>
                         <p><i class="fas fa-envelope" style="color: var(--primary-color);"></i> Email: thptasanh@gialai.gov.vn</p>
                         
                         <div class="social-links">
