--- a/public/index.html
+++ b/public/index.html
@@ -794,7 +794,7 @@
         </div>
 
         <!-- Posts/Announcements section -->
-        <h2 class="text-2xl font-bold text-gray-800 dark:text-white mb-4">Thông báo mới nhất</h2>
+        <h2 class="text-2xl font-bold text-black dark:text-white mb-4">Thông báo mới nhất</h2>
         <section id="posts" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"></section>
     </main>
 
