--- a/public/index.html
+++ b/public/index.html
@@ -811,7 +811,7 @@
                     <h3 class="text-lg font-bold mb-2">Liên kết nhanh</h3>
                     <ul>
                         <li><a href="/" class="hover:text-blue-300">Trang chủ</a></li>
-                        <li><a href="/admission" class="hover:text-blue-300">Tuyển sinh</a></li>
+                        <li><a href="/tuyensinh" class="hover:text-blue-300">Tuyển sinh</a></li>
                         <li><a href="/news" class="hover:text-blue-300">Tin tức</a></li>
                         <li><a href="/contact" class="hover:text-blue-300">Liên hệ</a></li>
                     </ul>
